--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 margin: 0;
                 padding: 0;
                 font-family: "Helvetica Neue", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-                background-color:rgb(235, 213, 173);
+                background-color:rgb(237, 242, 243);
             }
             .header {
                 padding: 10px 16px;
-                background: rgb(82, 26, 4);
+                background: rgb(109, 6, 6);
                 text-align: center;
                 color: #f1f1e4; 
                 border:0%
@@ -34,7 +34,7 @@
         </div>
         <div class=".content">
             <h3>
-                Project as a part of CS460/660- Machine Learning(2021)
+                Project as a part of CS460- Machine Learning(2021)
             </h3>
             <hr/>
             By Anshada P M and Varun Manilal
@@ -68,6 +68,15 @@
                 We try to make a deep neural network model using a multilayer
                 perceptron.
             </li>
+            <div class="image-container">   
+                <img src="image by alma.jpg"
+                width="373"
+                height="266">
+                <figcaption
+                  style="text-align:center;font-size:13px;font-style: italic;">
+                  Examples of image data by ALMA
+                 </figcaption>
+            </div>
             <li>
                 <b>References: </b>
                 <ul>
@@ -88,9 +97,104 @@
             </li>
  
             </ul>
+            <h3>
+                <u>PROJECT MIDWAY</u>
+
+            </h3> 
+            The deep neural network implemented mainly using sequential model from 
+            tensorflow keras model and has an input layer of six feature variable such as gap width, aspect
+            ratio, viscosity, dust to gas ratio, stokes number and density profile. Then there is an 
+            output layer of single node followed by two hidden layers of nodes 256 and 128.  
+            
+            The basic code is given as follows;
+
 
         </div>
+        <div class="image-container">   
+            <img src="code_1.png"
+            width="879"
+            height="250">    
+        </div>
+        <div>
+            For this planet prediction model the activation function relu was applied and L2 
+            regularisation was used and RMSprop algorithm was used as optimiser.
+        </div>
+        <div class="image-container">
+            <img src="rms.data.2k.jpg"
+            width="798"
+            height="143">
+        </div>
+        <div class="image-container">
+            <img src="rms.2k.jpg"
+            width="421"
+            height="256">
+        </div>
+        </div>
+        <div class="image-container">
+            <img src="rms.4k.jpg"
+            width="421"
+            height="256">
+        </div>
+        We experimented on optimizer function to minimize error. When code ran using optimizer function adam we
+        got low training error compared to RMSprop as given below: 
+        <div class="image-container">
+            <img src="adam.data.2k.jpg"
+            width="798"
+            height="143">
+        </div>
+        <div class="image-container">
+            <img src="adam.2k.jpg"
+            width="421"
+            height="256">
+        </div>
+        When SGD is used training error could minimize little more.
+        <div class="image-container">
+            <img src="sgd.2k.data.png"
+            width="798"
+            height="143">
+        </div>
+        <div class="image-container">
+            <img src="sgd.2k.png"
+            width="421"
+            height="256">
+        </div> 
+        <h3>
+            Sparse Modelling
+        </h3>
+        <div>
+            We are using sparse modelling(SpM) for reconstructing images from data 
+            sets taken by ALMA, using input parameters as field of view, image pixel size and 
+            regularization parameter set. Through this method we could reduce data size and increase
+            efficiency. We execute 10 fold cross validation with SpM and process imaging with 
+            minimum cross validation error. A flowchart of image processing with SpM is given below:
+        </div>
+        <div class="image-container">
+            <img src="sparse modelling.jpg"
+            width="588"
+            height="602">
+        </div>
+        <a href="https://docs.google.com/presentation/d/14aroxhCEoy7I1lZtK4XpB8b0n1InFHIao0etGg4Rhwg/edit?pli=1#slide=id.gea86aab84b_1_1">Powepoint presentation</a>
         
+        <div>
+
+        <b>References: </b>
+                <ul>
+                <li>
+                <cite>
+                    Yamaguchi, M., Tsukagoshi, T., Muto, T., Nomura, H., Nakazato, T.,
+Ikeda, S., Tamura, M. and Kawabe,R. 2021.ALMA Super-resolution Imaging of T Tau:
+                    r = 12 au Gap in the Compact Dust Disk around T Tau N. 
+                    <a href="https://arxiv.org/pdf/2110.00974.pdf">https://arxiv.org/pdf/2110.00974.pdf</a>
+                </cite>
+                </li>
+                <li>
+                <cite>
+                    Yamaguchi, M., Akiyama, K., Tsukagoshi, T., Muto, T., Kataoka, A., 
+                    Tazaki, F., Ikeda8, S., Fukagawa1, M., Honma, M., and Kawabe1, R. 2020. Super-resolution Imaging of the Protoplanetary Disk HD 142527 Using Sparse Modeling.
+                    <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab899f/pdf">https://iopscience.iop.org/article/10.3847/1538-4357/ab899f/pdf</a>
+                </cite></li>
+                </ul></div>
+
     </body>
 </html>
 
