--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             two hidden layers of nodes numbering 256 and 128. And gives a single node output which is 
             Planet Mass.
             
-            The basic code is given as follows;
+            The base code is given as follows;
 
 
         </div>
@@ -118,7 +118,7 @@
         </div>
         <div>
             For this planet prediction model the activation function relu was applied and L2 
-            regularisation was used and RMSprop algorithm was used as optimiser.
+            regularisation was used and RMSprop algorithm was used as optimiser function.
         </div>
         <div class="image-container">
             <img src="rms.data.2k.jpg"
@@ -174,6 +174,16 @@
               We might try Adadelta if time permits.
         </div>
         <h3>
+            Isolation Forest
+        </h3>
+        <div>
+            Isolation forest algorithm has been used to attempt to classify whether the
+             disks are host to planets or not. This has been implemented using sklearn library. 
+             Functions used include make_pipeline , StandardScaler, GradientBoostingRegressor 
+             and IsolationForest. Anomalies popped up as -1 and were compared for efficiency by 
+             looking at Dust Gap as the parameter.  Initial efficiencies are low and we plan to improve it by tweaking the parameters accordingly.
+        </div>
+        <h3>
             Sparse modelling
         </h3>
         <div>
@@ -210,7 +220,7 @@
                  and ring structures of the a young triple system T Tau from the ALMA archival data.
             </li>
         </ul>
-        <a href="https://docs.google.com/presentation/d/14aroxhCEoy7I1lZtK4XpB8b0n1InFHIao0etGg4Rhwg/edit?pli=1#slide=id.gea86aab84b_1_1">
+        <a href="https://github.com/anshadapm/21cs460_group08/blob/main/Detection%20of%20Exoplanets.pdf">
             Powepoint presentation</a>
         <div>
             <h3>
