--- a/index.html
+++ b/index.html
@@ -219,7 +219,21 @@
                 Using SpM a resolution of 5 x 4 au was obtained using which they observed disk
                  and ring structures of the a young triple system T Tau from the ALMA archival data.
             </li>
-        </ul>
+        <li>
+            <b>Sparse modelling:</b>
+        
+            We are using sparse modelling(SpM) for reconstructing images from data 
+            sets taken by ALMA, using input parameters as field of view, image pixel size and 
+            regularization parameter set. Through this method we could reduce data size and increase
+            efficiency. We execute 10 fold cross validation with SpM and process imaging with 
+            minimum cross validation error. A flowchart of image processing with SpM is given below:
+        
+        <div class="image-container">
+            <img src="sparse modelling.jpg"
+            width="588"
+            height="602">
+        </div>
+    </li></ul>
         <a href="https://github.com/anshadapm/21cs460_group08/blob/main/Detection%20of%20Exoplanets.pdf">
             Powepoint presentation</a>
         <div>
