--- a/index.html
+++ b/index.html
@@ -184,21 +184,6 @@
              looking at Dust Gap as the parameter.  Initial efficiencies are low and we plan to improve it by tweaking the parameters accordingly.
         </div>
         <h3>
-            Sparse modelling
-        </h3>
-        <div>
-            We are using sparse modelling(SpM) for reconstructing images from data 
-            sets taken by ALMA, using input parameters as field of view, image pixel size and 
-            regularization parameter set. Through this method we could reduce data size and increase
-            efficiency. We execute 10 fold cross validation with SpM and process imaging with 
-            minimum cross validation error. A flowchart of image processing with SpM is given below:
-        </div>
-        <div class="image-container">
-            <img src="sparse modelling.jpg"
-            width="588"
-            height="602">
-        </div>
-        <h3>
             Contribution From Papers   
         </h3>
         We could find some useful papers from which we get the following contributions:
@@ -234,7 +219,7 @@
             height="602">
         </div>
     </li></ul>
-        <a href="https://github.com/anshadapm/21cs460_group08/blob/main/Detection%20of%20Exoplanets.pdf">
+        <a href="https://docs.google.com/presentation/d/e/2PACX-1vSVIgOyEXHoklBSdJ41m9M9p_IXefQBRS7wEY-CHpzMOolfrPIX2IUbtB2N43lq1DH7MY5fTFDUUiAK/pub?start=false&loop=false&delayms=3000">
             Powepoint presentation</a>
         <div>
             <h3>
